# SuperClaude-Pro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
docs/: README.md
docs/examples/: basic-usage.md
docs/guides/: installation.md  quickstart.md
src/superclaude_pro/: __init__.py  cli.py
src/superclaude_pro/core/: __init__.py  config.py
src/superclaude_pro/telemetry/: __init__.py  collector.py
src/superclaude_pro/utils/: __init__.py  logger.py
tests/: conftest.py
tests/unit/: test_cli.py  test_config.py
